<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:paddingBottom="0dp"
    tools:context=".homepage"
    android:orientation="vertical"
    android:weightSum="1"
    android:id="@+id/HomeScreen"
    android:background="#ffffffff"
    android:gravity="top">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/PanelOne"
        android:focusableInTouchMode="false"
        android:weightSum="1"
        android:layout_weight="0.15"
        android:gravity="center_vertical|center_horizontal"
        android:background="#ffdfdfdf">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:id="@+id/imageView"
            android:src="@drawable/heart"
            android:contentDescription="@string/heart" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="76dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/health_risk"
            android:id="@+id/HealthRiskTitle"
            android:textColor="#363636"
            android:layout_gravity="center"
            android:gravity="center_vertical|center_horizontal|fill"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.43"
        android:background="#ff33b5e5"
        android:id="@+id/PanelTwo"
        android:weightSum="1"
        android:gravity="top">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/welcome"
            android:id="@+id/Welcome"
            android:textSize="25sp"
            android:textColor="#ffffffff"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="7dp"
            android:layout_marginBottom="10dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/PersonalProfile"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/personal_information"
                android:id="@+id/textView"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:gravity="left"
                android:layout_marginBottom="10dp"
                android:textColor="#363636" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:clickable="true"
            android:id="@+id/clickableIcons"
            android:measureWithLargestChild="true"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="7dp"
            android:layout_marginLeft="7dp"
            android:gravity="center_vertical|center_horizontal">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:gravity="bottom"
                android:layout_weight="0.5">

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:id="@+id/imageButton3"
                    android:src="@drawable/abc_ic_menu_copy_mtrl_am_alpha"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:clickable="true"
                    android:contentDescription="@string/medical_information"
                    android:layout_margin="7dp"
                    android:focusable="false" />

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:id="@+id/imageButton"
                    android:src="@drawable/abc_ic_search_api_mtrl_alpha"
                    android:background="#00000000"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:contentDescription="@string/search_database"
                    android:layout_margin="7dp"
                    android:focusable="true"
                    android:cropToPadding="true" />

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:id="@+id/imageButton2"
                    android:src="@drawable/abc_ic_menu_copy_mtrl_am_alpha"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:clickable="true"
                    android:layout_margin="7dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_horizontal|top"
            android:layout_gravity="bottom"
            android:layout_weight="0.7">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/medical_information"
                android:id="@+id/textView2"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:textSize="13sp"
                android:layout_margin="7dp"
                android:textColor="#363636" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/search_database"
                android:id="@+id/textView3"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textSize="13dp"
                android:layout_margin="7dp"
                android:textColor="#363636" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Medium Text"
                android:id="@+id/textView4"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textIsSelectable="false"
                android:textSize="13dp"
                android:layout_margin="7dp"
                android:textColor="#363636" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
